Bug 505081 - Not clear enough how to end a screen recording
Summary: Not clear enough how to end a screen recording
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 6.3.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2025-06-01 03:01 UTC by pqwoerituytrueiwoq
Modified: 2025-06-16 12:07 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pqwoerituytrueiwoq 2025-06-01 03:01:38 UTC
SUMMARY
When recording full screen content accessing the gui via the status tray widget it a pain, having a keyboard shortcut for this action would be great

STEPS TO REPRODUCE
1. start recording full screen content
2. attempt to stop recording
3. umm how do i go about this... at+tab? nope. uh.... guess i need to add a status tray widget to my second monitor... maybe there is a setting... ok, keyboard shortcuts that will do it... and there is not one to stop a recording...

OBSERVED RESULT
see step 3

EXPECTED RESULT
some clean way to stop recording when full screen content is active without closing the fullscreen content (eg a game)

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 25.04
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.3
Kernel Version: 6.15.0-rc4+ (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 5600 XT
Manufacturer: Micro-Star International Co., Ltd.
Product Name: MS-7B79
System Version: 2.0
Comment 1 Noah Davis 2025-06-01 21:19:54 UTC
It might not be obvious enough, but the way to do it is to just use the same shortcut again, or any other shortcut for recording. For instance, Meta+R to start a rectangle recording and Meta+R to stop.
Comment 2 pqwoerituytrueiwoq 2025-06-01 22:00:21 UTC
would meta+R also stop meta+shift+R or would that result in 2 recording at the same time?
Comment 3 Noah Davis 2025-06-02 12:39:15 UTC
(In reply to pqwoerituytrueiwoq from comment #2)
> would meta+R also stop meta+shift+R or would that result in 2 recording at
> the same time?

Yes. Meta+Shift+R would also stop Meta+R. It is impossible to have two simultaneous recordings unless you launch a new instance of spectacle with `spectacle -i`.
Comment 4 Nate Graham 2025-06-03 22:55:51 UTC
> 2. attempt to stop recording
> 3. umm how do i go about this

I think we need to dig into this, because that's the root cause of the issue.

When you start a recording, a notification appears telling you how to end it. In addition, a pulsing red icon appears in the system tray, and hovering over it indicates that you can click it to stop the recording.

I gather these weren't enough? Did you miss the notification, or reflexively close it without reading the contents? Was the System Tray icon hidden from view because you use an auto-hide panel? etc.
Comment 5 Bug Janitor Service 2025-06-04 20:06:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/spectacle/-/merge_requests/460
Comment 6 Noah Davis 2025-06-04 20:19:17 UTC
(In reply to Nate Graham from comment #4)
> I gather these weren't enough? Did you miss the notification, or reflexively close it without reading the contents? Was the System Tray icon hidden from view because you use an auto-hide panel? etc.

He simply didn't have a system tray, so he had no way to end the recording without adding one.
Comment 7 Noah Davis 2025-06-04 20:19:52 UTC
Actually he did, but he didn't know.
Comment 8 pqwoerituytrueiwoq 2025-06-05 03:19:47 UTC
to clarify i have a system tray, but only on one of my monitors, the full-screen content (a game running via proton in steam) was on the one with the tray (that is the screen i get notifications on as well, be nice if those could go on the other screen, but that is a different open existing issue)

you could word the keybindings to indicate it will stop recording instead of just starting it (Record Rectangular Region/Record Screen/Record Window)

when i did try to use the keybindings i could not tell if it was working and pressed it multiple times i ended up with several stop buttons in my tray , clicking on it gave me a tiny window with a un-decorated 'exit' button, it did not appear to be recording anything based on system usage
Comment 9 Noah Davis 2025-06-05 14:33:53 UTC
(In reply to pqwoerituytrueiwoq from comment #8)
> you could word the keybindings to indicate it will stop recording instead of
> just starting it (Record Rectangular Region/Record Screen/Record Window)

That sounds like a good idea.

> when i did try to use the keybindings i could not tell if it was working and
> pressed it multiple times i ended up with several stop buttons in my tray ,
> clicking on it gave me a tiny window with a un-decorated 'exit' button, it
> did not appear to be recording anything based on system usage

That sounds odd. I can't see any issues like this one. Could you post a separate bug report about this?
Comment 10 pqwoerituytrueiwoq 2025-06-05 15:50:47 UTC
i'll see if i can reproduce it later, have to get to work early today and probably tomorrow... i really need a day.addHours() function
Comment 11 Noah Davis 2025-06-13 18:50:24 UTC
Git commit 7fd2fe158408b6285f9855f7fcf34e77d4ecb764 by Noah Davis.
Committed on 13/06/2025 at 18:47.
Pushed by ndavis into branch 'master'.

Rename shortcuts to show that they can start or stop recording

M  +3    -3    desktop/org.kde.spectacle.desktop.cmake
M  +3    -3    src/ShortcutActions.cpp

https://invent.kde.org/plasma/spectacle/-/commit/7fd2fe158408b6285f9855f7fcf34e77d4ecb764
Comment 12 Noah Davis 2025-06-13 18:50:32 UTC
Git commit 97f209559c00acc1ea6d0736bb318ac0254a3e37 by Noah Davis.
Committed on 13/06/2025 at 18:47.
Pushed by ndavis into branch 'master'.

Say which shortcut can stop recording in recording notification

It will say Meta+R by default, but will show the shortcut used to initiate the recording instead if Meta+R isn't assigned to region recording.

M  +16   -0    src/Platforms/VideoPlatform.cpp
M  +4    -0    src/Platforms/VideoPlatform.h
M  +4    -2    src/Platforms/VideoPlatformWayland.cpp
M  +27   -1    src/SpectacleCore.cpp

https://invent.kde.org/plasma/spectacle/-/commit/97f209559c00acc1ea6d0736bb318ac0254a3e37