Say which shortcut can stop recording in recording notification

It will say Meta+R by default, but will show the shortcut used to initiate the recording instead if Meta+R isn't assigned to region recording.

BUG: 505081